Add AudibleInstruments source submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "AudibleInstruments/AudibleInstruments"]
+	path = AudibleInstruments/AudibleInstruments
+	url = https://github.com/4ms/AudibleInstruments
 [submodule "metamodule-plugin-sdk"]
 	path = metamodule-plugin-sdk
 	url = git@github.com:4ms/metamodule-plugin-sdk
