--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "metamodule-plugin-sdk"]
 	path = metamodule-plugin-sdk
 	url = git@github.com:4ms/metamodule-plugin-sdk
+[submodule "Befaco/Befaco"]
+	path = Befaco/Befaco
+	url = https://github.com/hemmer/Befaco.git
