--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/scanner-darkly/eightfold.git
 [submodule "Valley/ValleyRackFree"]
 	path = Valley/ValleyRackFree
-	url = https://github.com/ValleyAudio/ValleyRackFree.git
+	url = https://github.com/4ms/ValleyRackFree.git
