Add assets for ChowDSP

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Bogaudio/BogaudioModules"]
 	path = Bogaudio/BogaudioModules
 	url = https://github.com/4ms/BogaudioModules
+[submodule "chowdsp/ChowDSP-VCV"]
+	path = chowdsp/ChowDSP-VCV
+	url = https://github.com/jatinchowdhury18/ChowDSP-VCV.git
