--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "chowdsp/ChowDSP-VCV"]
 	path = chowdsp/ChowDSP-VCV
 	url = https://github.com/4ms/ChowDSP-VCV.git
+[submodule "CountModula/VCVRackPlugins"]
+	path = CountModula/VCVRackPlugins
+	url = https://github.com/countmodula/VCVRackPlugins.git
