--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "chowdsp/ChowDSP-VCV"]
 	path = chowdsp/ChowDSP-VCV
 	url = https://github.com/4ms/ChowDSP-VCV.git
+[submodule "kocmoc/kocmoc-rack-modules"]
+	path = kocmoc/kocmoc-rack-modules
+	url = https://github.com/janne808/kocmoc-rack-modules.git
