Geodesics: Use 4ms fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/4ms/ValleyRackFree.git
 [submodule "Geodesics/Geodesics"]
 	path = Geodesics/Geodesics
-	url = https://github.com/MarcBoule/Geodesics.git
+	url = https://github.com/4ms/Geodesics.git
 [submodule "Bogaudio/BogaudioModules"]
 	path = Bogaudio/BogaudioModules
 	url = https://github.com/4ms/BogaudioModules
