--- a/Valley/CMakeLists.txt
+++ b/Valley/CMakeLists.txt
@@ -49,7 +49,6 @@ target_sources(Valley
     ${SOURCE_DIR}/src/dsp/filters/OnePoleFilters.cpp
     ${SOURCE_DIR}/src/dsp/filters/VecOnePoleFilters.cpp
     ${SOURCE_DIR}/src/dsp/filters/VecOTAFilter.cpp
-    ${SOURCE_DIR}/src/dsp/filters/OTAFilter.cpp
     ${SOURCE_DIR}/src/dsp/modulation/VecLoopingADSR.cpp
     ${SOURCE_DIR}/src/dsp/fx/DiodeRingMod.cpp
     ${SOURCE_DIR}/src/dsp/fx/VecDiodeRingMod.cpp
@@ -71,10 +70,13 @@ target_include_directories(Valley PRIVATE
 	# ${CMAKE_CURRENT_LIST_DIR}
 )
 
-target_compile_options(Valley 
-	PRIVATE 
+target_compile_options(Valley PRIVATE 
 	-Wno-double-promotion 
 	$<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-float-conversion>
+)
+
+target_compile_definitions(Valley PRIVATE
+    DSJ_VEC_DIODE_TABLE_N=64
 )
 
 set_property(TARGET Valley PROPERTY CXX_STANDARD 20)
