--- a/.gitmodules
+++ b/.gitmodules
@@ -36,4 +36,4 @@
 	url = https://github.com/hemmer/rebel-tech-vcv
 [submodule "Sapphire/sapphire"]
 	path = Sapphire/sapphire
-	url = https://github.com/cosinekitty/sapphire.git
+	url = https://github.com/4ms/sapphire.git
