Clean up cmake flags

--- a/Airwindows/CMakeLists.txt
+++ b/Airwindows/CMakeLists.txt
@@ -8,9 +8,8 @@ project(AirwindowsModules
 )
 
 
-set(METAMODULE ON)
 add_subdirectory(airwin2rack)
-target_compile_options(airwin-registry PRIVATE "-Wno-misleading-indentation;-Wno-unused-variable")
+target_compile_options(airwin-registry PRIVATE "-Wno-misleading-indentation;-Wno-unused-variable;-Wno-stringop-truncation")
 
 add_library(AirwindowsModules STATIC)
 
