--- a/NativeExample/CMakeLists.txt
+++ b/NativeExample/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.22)
 include(../metamodule-plugin-sdk/plugin.cmake)
 
-project(SimpleModules 
+project(NativeExample 
     VERSION 0.1 
     DESCRIPTION "Example Native Plugin for MetaModule" 
     LANGUAGES C CXX ASM
 )
 
-add_library(SimpleModules STATIC)
-target_include_directories(SimpleModules PRIVATE . )
+add_library(NativeExample STATIC)
+target_include_directories(NativeExample PRIVATE . )
 
-target_sources(SimpleModules PRIVATE
+target_sources(NativeExample PRIVATE
 	simple_gain.cc
 	simple_gain_elements.cc
     plugin.cc
@@ -18,8 +18,8 @@ target_sources(SimpleModules PRIVATE
 
 # Call this to link and create the plugin file
 create_plugin(
-    SOURCE_LIB      SimpleModules
-    PLUGIN_NAME     SimpleModules
+    SOURCE_LIB      NativeExample
+    PLUGIN_NAME     NativeExample
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets
-    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins/SimpleModules
+    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins/NativeExample
 )
