--- a/OrangeLine/CMakeLists.txt
+++ b/OrangeLine/CMakeLists.txt
@@ -56,6 +56,7 @@ set_property(TARGET OrangeLine PROPERTY CXX_STANDARD 20)
 create_plugin(
     SOURCE_LIB      OrangeLine                  # This is the cmake target name (defined in add_target)
     PLUGIN_NAME     OrangeLine                  # This must match the brand "slug" used in VCV Rack
+    PLUGIN_JSON     ${SOURCE_DIR}/plugin.json           # Path to the plugin.json file used by VCV Rack
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets    # Path to the assets/ dir containing the PNGs
     DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins/OrangeLine # Path to where you want the plugin dir output: it can be shared between multiple plugins
 )
