--- a/Geodesics/CMakeLists.txt
+++ b/Geodesics/CMakeLists.txt
@@ -58,6 +58,7 @@ set_property(TARGET Geodesics PROPERTY CXX_STANDARD 20)
 create_plugin(
     SOURCE_LIB      Geodesics                  # This is the cmake target name (defined in add_target)
     PLUGIN_NAME     Geodesics                  # This must match the brand "slug" used in VCV Rack
+    PLUGIN_JSON     ${SOURCE_DIR}/plugin.json           # Path to the plugin.json file used by VCV Rack
     SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets    # Path to the assets/ dir containing the PNGs
     DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins/Geodesics # Path to where you want the plugin dir output: it can be shared between multiple plugins
 )
